# woodblock

./: .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  Makefile  README.md  coverage.ini  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: api.rst  citations.rst  cli.rst  conf.py  configfiles.rst  default.css  default.scss  groundtruth.rst  index.rst  installation.rst  overview.rst
docs/w/: citations.html  home.html  index.html  installation.html
docs/w/usage/: api.html  cli.html  configs.html
documentation/: draw-io-images.xml
documentation/docs/: citations.md  index.md  installation.md
documentation/docs/usage/: api.md  cli.md  configs.md
documentation/style/templates/: base.html  document.html
examples/configs/: benchmark-layout.conf  bifragment-gap.conf  regression-image.conf  three-scenarios.conf
tests/data/configs/: three-scenarios.conf
tests/data/configs/invalid/: layout-contains-undefined-files.conf  sizes-exceed-file.conf
tests/data/corpus/: 1024  2000  4096
tests/data/corpus/letters/: README  README.md  ascii_letters  ascii_lowercase  ascii_uppercase
tests/system/: conftest.py  test_ground_truth_integrity.py  test_image_from_config.py  test_images_with_fragmentation.py  test_reproducibility.py  test_simple_image_creation.py
tests/unit/: conftest.py  test_datagen.py  test_file.py  test_fragments.py  test_image.py  test_image_config.py  test_image_log_parser.py  test_image_rng.py  test_random.py  test_scenario.py  test_utils.py  test_visualization.py
woodblock/: __init__.py  __main__.py  datagen.py  errors.py  file.py  fragments.py  image.py  random.py  scenario.py  utils.py  visualization.py
